# AgentClaw

./: .claudeignore  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  README.md  README_CN.md  docker-compose.yml  mcp.json  pyproject.toml  requirements.txt  server.py  test_final.py
agentclaw/: __init__.py  base.py  cli.py  config.py  env_config.py  exceptions.py  platform_compat.py  runtime_paths.py  version.py
agentclaw/admin-dashboard/: index.html  package-lock.json  package.json  vite.config.js
agentclaw/admin-dashboard/scripts/: i18n-audit.mjs  i18n-batch-replace.mjs
agentclaw/admin-dashboard/src/: App.vue  main.js
agentclaw/agent_factory/: __init__.py  blueprint.py  blueprint_generator.py  domain_classifier.py  generator.py  requirement_analyzer.py  scaffold_generator.py  serializer.py  template_matcher.py  template_store.py
agentclaw/agent_square/: __init__.py
agentclaw/agent_square/approval/: README.md  claw_app.json
agentclaw/agent_square/doc_analyzer/: README.md  claw_app.json
agentclaw/agent_square/docx_generator/: README.md  claw_app.json
agentclaw/agent_square/gif_agent/: README.md  claw_app.json
agentclaw/agent_square/greeting_agent/: claw_app.json
agentclaw/agent_square/hello_world/: README.md  claw_app.json
agentclaw/agent_square/kb_rag/: README.md  claw_app.json
agentclaw/agent_square/mcp_agent/: README.md  claw_app.json
agentclaw/agent_square/parallel/: README.md  claw_app.json
agentclaw/agent_square/router/: README.md
agentclaw/agent_square/tool_agent/: README.md  claw_app.json
agentclaw/agent_square/turtle_soup_agent/: README.md  __init__.py  claw_app.json
agentclaw/agent_square/viral_xiaohongshu_writer/: README.md  claw_app.json
agentclaw/agent_square/weekly_report/: README.md  claw_app.json
agentclaw/agent_square/werewolf_agent/: README.md  __init__.py  claw_app.json
agentclaw/agent_square/xiaohongshu_writer/: claw_app.json
agentclaw/api/: __init__.py  builtin_agent.py  registry.py  security_headers.py  server.py  upload_limits.py
agentclaw/api/auth/: __init__.py  api_key.py  dependencies.py  middleware.py  token.py  utils.py
agentclaw/api/files/: __init__.py  response.py  signing.py
agentclaw/api/routers/: __init__.py
agentclaw/api/schemas/: __init__.py  audio.py  common.py  conversation.py  dashboard.py  execution.py  knowledgebase.py  model.py  prompt.py  public_room.py  sse_events.py  trace.py  upload.py  workflow.py
agentclaw/api/services/: __init__.py  audio_synthesis.py  confirm_service.py  conversation_service.py  dashboard_service.py  model_service.py  prompt_service.py  public_room_chat_service.py  public_room_service.py  public_sensitive_words_service.py  safety_guard_service.py  settings_service.py  tool_config_service.py  trace_service.py  workflow_service.py
agentclaw/audio/: __init__.py  service.py  types.py
agentclaw/channels/: __init__.py  dingtalk.py  feishu.py  models.py  probe.py  qq.py  routes.py  setup.py  store.py  wecom.py
agentclaw/database/: __init__.py  file_storage.py  manager.py  storage_backend.py
agentclaw/docker/: .env.example  start.sh  stop.sh
agentclaw/evolution/: __init__.py  approval_gate.py  pattern_miner.py  skill_candidate.py  skill_evaluator.py  skill_extractor.py  skill_publisher.py
agentclaw/examples/: .env.example  README.md  models.json.example  server.py
agentclaw/experience/: __init__.py  event_logger.py  event_schema.py  feedback_collector.py  privacy_filter.py  trajectory_store.py
agentclaw/graph/: __init__.py  context.py  state_path.py  template.py  workflow.py
agentclaw/inputs/: __init__.py  parser.py  types.py
agentclaw/knowledgebase/: __init__.py  backend.py  model_gateway.py  models.py  parser.py  service.py  splitter.py  storage.py  store.py  vector_store.py
agentclaw/logger/: __init__.py  config.py
agentclaw/mcp/: __init__.py  browser_server.py  client.py  config.py  download_limits.py  file_lock.py  manager.py  token_manager.py  toolkit.py
agentclaw/memory/: __init__.py  workflow_memory.py
agentclaw/model/: __init__.py  manager.py  vision.py
agentclaw/node/: __init__.py  base.py  custom.py  document.py  human.py  knowledgebase.py  llm.py  llm_prompt.py  llm_skills.py  llm_tools.py  mcp.py  state_extract.py  sub_workflow.py  toolkit.py  types.py
agentclaw/prompt/: __init__.py  manager.py
agentclaw/registry/: __init__.py  agent_registry.py  skill_registry.py  version_manager.py
agentclaw/runtime/: __init__.py  context_compressor.py  debugger.py  maintenance.py  resource_manager.py  sse.py
agentclaw/scheduler/: __init__.py  api.py  lock.py  models.py  runner.py  scheduler.py  store.py
agentclaw/skills/: __init__.py  executor.py  manager.py  parser.py  schema.py
agentclaw/state/: __init__.py  checkpointer.py  memory.py  schema.py  serializer.py
agentclaw/test/: conftest.py
agentclaw/tools/: __init__.py  executor.py  loader.py  server.py  spec.py
agentclaw/utils/: __init__.py  datetime.py  security.py  stream.py  token_counter.py
agents/: __init__.py  daily_ai_news.py  hello_world.py  timestamp_agent.py  weather_bot.py
agents/custom_demo/: README.md  claw_app.json
agents/router/: claw_app.json
assets/: .gitkeep
docs/upgrade/: 00_repository_audit.md  01_upgrade_roadmap.md  02_agent_blueprint.md  03_agent_factory.md  04_enterprise_templates.md  05_experience_collector.md  06_skill_evolution.md  07_registry_versioning.md  08_enterprise_tools.md
generated_docs/: smoke_test_notemplate.docx  smoke_test_template.docx  test_smartwatch_report.docx
templates/enterprise_agents/: customer_support.yaml  finance_review.yaml  general.yaml  hr_recruiting.yaml  knowledge_assistant.yaml  legal_review.yaml  operations_analysis.yaml  procurement.yaml  sales.yaml
tools/specs/: format_json.yaml  get_timestamp.yaml  ping_host.yaml  query_order.yaml
user_templates/: company_report_template.docx
workflows/: ac_sales_training.py  docx_generator.py  douyin_writer.py  github_trending_push.py  sales_lead_analyzer.py  sales_training.py  stock_daily_news.py  viral_xiaohongshu_writer.py  xiaohongshu_writer.py
(+303 files in other folders)
